--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,6 +7,8 @@
     tools:context=".auth.SignIn">
 
     <ImageView
+        android:layout_margin="20dp"
+        android:src="@drawable/app_logo"
         android:id="@+id/img1"
         android:layout_width="match_parent"
         android:layout_height="200dp"
