--- a/app/src/main/res/layout/activity_name_and_email.xml
+++ b/app/src/main/res/layout/activity_name_and_email.xml
@@ -54,7 +54,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnSignIn"
+        android:id="@+id/btnS1Next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
