--- a/app/src/main/res/layout/activity_ques_gender.xml
+++ b/app/src/main/res/layout/activity_ques_gender.xml
@@ -1,29 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context=".view.section2.QuesGender"
-    android:padding="16dp">
+    android:padding="16dp"
+    tools:context=".view.section2.QuesGender">
 
     <TextView
         android:id="@+id/genderLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp"
         android:text="Select Gender"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp"/>
+        android:textStyle="bold" />
 
+    <RadioGroup
+        android:id="@+id/genderRadioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <RadioButton
+            android:id="@+id/genderMale"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/radio_selector"
+            android:button="@color/app_theme"
+            android:drawableTop="@drawable/male24px"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Male" />
+
+        <RadioButton
+            android:id="@+id/genderFemale"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/radio_selector"
+            android:button="@color/app_theme"
+            android:drawableTop="@drawable/female24px"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Female" />
+
+        <RadioButton
+            android:id="@+id/genderTrans"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/radio_selector"
+            android:button="@color/app_theme"
+            android:drawableTop="@drawable/transgender24px"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Other" />
+
+    </RadioGroup>
 
     <Button
         android:id="@+id/selectButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:text="Select" />
 
 </LinearLayout>
